--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cmtt-special",
+  "name": "vk-music",
   "version": "1.0.0",
-  "description": "Base for special project",
+  "description": "Special for vk",
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack",
