--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "gh-pages": "^1.2.0",
     "imports-loader": "^0.8.0",
+    "perfect-scrollbar": "^1.4.0",
     "postcss-loader": "^2.1.0",
     "style-loader": "^0.20.1",
     "stylus": "^0.54.5",
